[gd_scene load_steps=5 format=2]

[ext_resource path="res://star-shooter/assets/fuel.png" type="Texture" id=1]
[ext_resource path="res://star-shooter/scripts/Ammo.gd" type="Script" id=2]
[ext_resource path="res://star-shooter/assets/recharge_ammo.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 48 )

[node name="Ammo" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, 1.90735e-06 )
scale = Vector2( 0.0876369, 0.065625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RechargeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Ammo_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Ammo_body_entered"]
